Upgrade to OpenVPN 2.6.12 and dco support.

--- a/Esp.Tools.OpenVPN.Installer/Product.wxs
+++ b/Esp.Tools.OpenVPN.Installer/Product.wxs
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="8EDA72AA-85B8-474A-B274-B688510B9D9C" Name="OpenVPN UI" Language="1033" Version="1.0.11.0"
+  <Product Id="8EDA72AA-85B8-474A-B274-B688510B9D9C" Name="OpenVPN UI" Language="1033" Version="1.0.13.0"
            Manufacturer="ESP Technologies Ltd" UpgradeCode="DB96C5A7-589F-45D2-8E84-322474207358">
     <Package InstallerVersion="500" Compressed="yes" />
 
@@ -15,8 +15,7 @@
     <?include Properties.wxi ?>
     <?include Binaries.wxi ?>
     <?include InstallSetup.wxi ?>
-
-
+    
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramMenuFolder" Name="Programs">
         <Directory Id="ProgramMenuDir" Name="OpenVPN UI" />
@@ -31,23 +30,26 @@
           <?include OpenVPNx86.wxi ?>
           <?endif ?>
           <?include ServiceInstall.wxi ?>
+
         </Directory>
       </Directory>
     </Directory>
+    <DirectoryRef Id="INSTALLLOCATION">
+      <Merge Id="OVPNdco" SourceFile="OpenVPN\ovpn-dco-amd64.msm" DiskId="1" Language="0">
+        <ConfigurationData Name="NETADAPTERCX21_Property" Value="[NETADAPTERCX21]" />
+      </Merge>
 
-    <DirectoryRef Id="TARGETDIR">
-      <Merge Id="OVPN-dco" SourceFile="OpenVPN\ovpn-dco-amd64.msm" DiskId="1" Language="0"/>
     </DirectoryRef>
 
     <Feature Id="ProductFeature" Title="OpenVPN UI" Level="1">
       <ComponentRef Id="Main" />
       <ComponentRef Id="Service" />
-      <?if $(var.Platform) = x64 ?>
-      <ComponentRef Id="OpenVPNTapX64" />
+      <?if $(var.Platform) = x64 ?>      
+      <MergeRef Id="OVPNdco"/>
       <?else ?>
       <ComponentRef Id="OpenVPNTapX86" />
       <?endif ?>
-      <MergeRef Id="OVPN-dco"/>
+      
 
       <ComponentRef Id="OpenVPNbin" />
     </Feature>
